# Questionarytauri

./: .gitignore  Questionary_0.1.0_x64-setup.exe.sig  README.md  code-manifest.json  content-manifest.json  generate-manifest.js  package-lock.json  package.json  updater.json
.github/workflows/: release.yml
scripts/: build_full_hierarchy.py  documents_object.js  download_with_oauth.py  full_documents_object.js  generate_documents_object.py  migrate.bat  migrate_to_github.py
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/css/: styles.css
src/js/: app.js  contentUpdater.js  hotUpdater.js
