[package]
name = "Questionary"
version = "0.1.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "questionary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-prevent-default = "0.2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2.3.1"
